[Fix] Improved readability

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,7 @@ textarea {
 .inputContent {
   margin: 10px;
   margin-left: 0px;
+  margin-bottom: 30px;
 }
 
 .highContainer3 {
